# CoreUtils-old

./: CMakeLists.txt  Dockerfile  LICENSE
example/: example.cxx
src/: CoreUtils.cxx  CoreUtils.hxx
src/System/: SystemInfo.cxx  SystemInfo.hxx
